search function uses age and interests now and displays them

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
             </div>
             <div class="container">
                 <form (submit)="onSearch()">
-                  <input type="text" [(ngModel)]="searchQuery" name="query" placeholder="Enter search here">
+                  <input type="text" [(ngModel)]="searchQuery" name="query" placeholder="Enter search here - username/realname, minAge, maxAge, interest1, interest2, ...">
                   <button type="submit">Search</button>
                 </form>
                
