--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -37,6 +37,10 @@
                                 {{ result.profile.userSport ? 'Sport' : '' }}
                                 {{ result.profile.userCooking ? 'Cooking' : '' }}
                                 {{ result.profile.userReading ? 'Reading' : '' }}
+                                {{ result.profile.userFilm ? 'Film' : '' }}
+                                {{ result.profile.userGaming ? 'Gaming' : '' }}
+                                {{ result.profile.userMusic ? 'Music' : '' }}
+                                {{ result.profile.userTravel ? 'Travel' : '' }}
                             </p>
                             </div>
                             <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'" class="circular-image">
