--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -32,10 +32,14 @@
         <div class="right"> 
             <div><h2>Dating in disguise</h2></div>
             <div class="rightcentral">
-                <div class="centralcontainer1">hi</div>
-                <div class="centralcontainer2">hi</div>
-                <div class="centralcontainer3">hi</div>
-                <div class="centralcontainer4">hi</div>
+                <div class="leftblack">
+                    <img src="https://images.squarespace-cdn.com/content/v1/63052619b0f81122751533e9/1668105123966-OR5DVVRV4LY6IV9IYNL7/couples-photography-afp-27.jpg">
+                </div>
+                <div class="rightblack">
+                    <img src="https://static.toiimg.com/photo/105145106.cms">
+                </div>
+
+                
 
             </div>
             
