--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -7,37 +7,53 @@
     <link href='https://fonts.googleapis.com/css?family=Irish+Grover' rel='stylesheet'>
 </head>
 <body>
-<h2 class="h2">Sign Up</h2>
-<form (ngSubmit)="onSubmit()">
-    <div class="form-group">
-        <label for="userName">User Name:</label>
-        <br>
-        <input type="text" id="userName" name="userName" [(ngModel)]="userName">
-    </div>
+    <div class="container">
+        <div class="left">
+            <h2 class="h2">Sign Up</h2>
+            <form (ngSubmit)="onSubmit()">
+                <div class="form-group">
+                    <label for="userName">User Name:</label>
+                    <br>
+                    <input type="text" id="userName" name="userName" [(ngModel)]="userName">
+                </div>
 
-    <div class="form-group">
-        <label for="userEmail">User Email:</label>
-        <br>
-        <!-- Add autocomplete attribute -->
-        <input type="email" id="userEmail" name="userEmail" [(ngModel)]="userEmail" autocomplete="username">
-    </div>
+                <div class="form-group">
+                    <label for="userEmail">User Email:</label>
+                    <br>
+                    <!-- Add autocomplete attribute -->
+                    <input type="email" id="userEmail" name="userEmail" [(ngModel)]="userEmail" autocomplete="username">
+                </div>
 
-    <div class="form-group">
-        <label for="userPassword">User Password:</label>
-        <br>
-        <input type="password" id="userPassword" name="userPassword" [(ngModel)]="userPassword">
+                <div class="form-group">
+                    <label for="userPassword">User Password:</label>
+                    <br>
+                    <input type="password" id="userPassword" name="userPassword" [(ngModel)]="userPassword">
+                </div>
+                <div class="form-group">
+                    <label for="userPassword">Confirm Password:</label>
+                    <br>
+                    <input type="password" id="userPassword2" name="userPassword2" [(ngModel)]="userPassword2">
+                </div><br>
+                <button type="submit">Login</button>
+
+                <button type="submit">Sign Up</button>
+
+                <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
+            </form>
+        </div>
+
+        <div class="right">
+            <div><h2>Dating in disguise</h2></div>
+            <div class="rightcentral">
+                <div class="leftblack">
+                    <img src="https://images.squarespace-cdn.com/content/v1/63052619b0f81122751533e9/1668105123966-OR5DVVRV4LY6IV9IYNL7/couples-photography-afp-27.jpg">
+                </div>
+                <div class="rightblack">
+                    <img src="https://static.toiimg.com/photo/105145106.cms">
+                </div>
+            </div>
+            <!-- Additional content can be added here -->
+        </div>
     </div>
-    <div class="form-group">
-        <label for="userPassword">Confirm Password:</label>
-        <br>
-        <input type="password" id="userPassword2" name="userPassword2" [(ngModel)]="userPassword2">
-    </div><br>
-      
-    <button type="submit">Sign Up</button>
-    <div *ngIf="errorMessage" class="error-message">{{ errorMessage }}</div>
-    <div>
-    <img style="background-color: black;" src="assets/images/rabbit.jpg" class="img-fluid">
-    </div>
-</form>
 </body>
 </html>
