--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -31,21 +31,20 @@
                 <div class="body">
                     <div *ngIf="selectedChatID">
                         <div *ngFor="let message of chatMessages" [ngClass]="{'sent-message': message.data.senderID === uid, 'received-message': message.data.senderID !== uid}">
-                            <p class="message1">Message ID: {{ message.messageId }}</p>
-                            <p class="message1">Text: {{ message.data.content }}</p>
-                            <p class="message1">SenderID: {{ message.data.senderID }}</p>
-                            <p class="message1">Timestamp: {{ message.data.timestamp | date: 'medium' }}</p>
+                            <p class="message1">{{ message.data.content }}</p>
+                            <p class="message1">{{ message.data.timestamp | timestampDate | date: 'medium' }}</p>
                         </div>
                     </div>
                     <div *ngIf="!selectedChatID">
-                        <p class="placeholder-message">Select a chat to view messages</p>
-                    </div>
+                      <p class="placeholder-message" style="font-size: larger;">Select a chat to view messages</p>
+                  </div>
+                  
                 </div>
-                <div class="footer">
-                    <form (submit)="sendMessageForm(selectedChatID ? selectedChatID : '')">
-                        <input type="text" name="messageContent" [(ngModel)]="messageContent">
-                        <button type="submit">Send</button>
-                    </form>
+                <div class="footer" *ngIf="selectedChatID">
+                  <form (submit)="sendMessageForm(selectedChatID)">
+                      <input type="text" name="messageContent" [(ngModel)]="messageContent" placeholder="Type your message...">
+                      <button type="submit">Send</button>
+                  </form>
                 </div>
             </div>
         </div>
