--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,8 +35,10 @@
                 <div class="leftblack">
                     <img src="https://images.squarespace-cdn.com/content/v1/63052619b0f81122751533e9/1668105123966-OR5DVVRV4LY6IV9IYNL7/couples-photography-afp-27.jpg">
                 </div>
+                <img src="assets/images/blindfold-512.png" class="center-image" alt="Center Image"> 
+
                 <div class="rightblack">
-                    <img src="https://static.toiimg.com/photo/105145106.cms">
+                    <img src="https://images.pexels.com/photos/1024984/pexels-photo-1024984.jpeg?cs=srgb&dl=pexels-asadphoto-1024984.jpg&fm=jpg">
                 </div>
 
                 
