--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -34,7 +34,7 @@
                     <br>
                     <input type="password" id="userPassword2" name="userPassword2" [(ngModel)]="userPassword2">
                 </div><br>
-                <button type="submit">Login</button>
+                <button class="button" routerLink="/">Login</button>
 
                 <button type="submit">Sign Up</button>
 
@@ -43,13 +43,15 @@
         </div>
 
         <div class="right">
+
             <div><h2>Dating in disguise</h2></div>
             <div class="rightcentral">
                 <div class="leftblack">
                     <img src="https://images.squarespace-cdn.com/content/v1/63052619b0f81122751533e9/1668105123966-OR5DVVRV4LY6IV9IYNL7/couples-photography-afp-27.jpg">
                 </div>
+                <img src="assets/images/blindfold-512.png" class="center-image" alt="Center Image"> 
                 <div class="rightblack">
-                    <img src="https://static.toiimg.com/photo/105145106.cms">
+                    <img src="https://images.pexels.com/photos/1024984/pexels-photo-1024984.jpeg?cs=srgb&dl=pexels-asadphoto-1024984.jpg&fm=jpg">
                 </div>
             </div>
             <!-- Additional content can be added here -->
