--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -6,8 +6,8 @@
     margin: 0 auto;
     background-color: white;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-    height: 90vh;
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
+    height: 97vh;
     display: flex;
     flex-wrap: wrap; /* Allow items to wrap to the next line if necessary */
 }
@@ -65,15 +65,28 @@
 }
 
 .leftblack img{
-    width: 100%;
-    height: 80%;
+    width: 98%;
+    height: 100%;
+    border-right: 5px solid black;    
 
 }
 
 .rightblack img{
     height: 100%;
-    width: 80%;
+    width: 98.5%;
+    border-left: 5px solid black;    
 
+
+}
+
+.center-image {
+    position: absolute;
+    top: 50%;
+    left: 62%;
+    transform: translate(-50%, -50%);
+    height: 28%;
+    width: 13%;
+    border-radius: 50%;
 }
 
     .right h2 {
@@ -126,4 +139,20 @@ button {
 
 button:hover {
     background-color: #c11e08; /* Change button background color on hover */
+}
+
+@media screen and (max-width: 800px) {
+    
+    .container {
+        flex-direction: column; 
+    }
+
+    .left {
+        order: 1; 
+        flex: 3;
+    }
+
+    .right {
+        display: none;
+    }
 }
