--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -6,7 +6,7 @@
     margin: 0 auto;
     background-color: white;
     border-radius: 8px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
     height: 97vh;
     display: flex;
     flex-wrap: wrap; /* Allow items to wrap to the next line if necessary */
@@ -58,22 +58,35 @@
 }
 
 .container-image {
-    max-width: 100%; /* Ensures the image doesn't exceed the width of its container */
+    max-width: 97%; /* Ensures the image doesn't exceed the width of its container */
     max-height: 100%; /* Ensures the image doesn't exceed the height of its container */
     display: block; /* Ensures the image is displayed as a block element */
     margin: auto; /* Centers the image horizontally within its container */
 }
 
 .leftblack img{
-    width: 100%;
-    height: 80%;
+    width: 98%;
+    height: 100%;
+    border-right: 5px solid black;    
 
 }
 
 .rightblack img{
     height: 100%;
-    width: 80%;
+    width: 98.5%;
+    border-left: 5px solid black;    
 
+
+}
+
+.center-image {
+    position: absolute;
+    top: 50%;
+    left: 62%;
+    transform: translate(-50%, -50%);
+    height: 28%;
+    width: 13%;
+    border-radius: 50%;
 }
 
     .right h2 {
@@ -126,4 +139,20 @@ button {
 
 button:hover {
     background-color: #c11e08; /* Change button background color on hover */
+}
+
+@media screen and (max-width: 800px) {
+    
+    .container {
+        flex-direction: column; 
+    }
+
+    .left {
+        order: 1; 
+        flex: 3;
+    }
+
+    .right {
+        display: none;
+    }
 }
