--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -33,7 +33,7 @@
             <div><h2>Dating in disguise</h2></div>
             <div class="rightcentral">
                 <div class="leftblack">
-                    <img src="https://images.squarespace-cdn.com/content/v1/63052619b0f81122751533e9/1668105123966-OR5DVVRV4LY6IV9IYNL7/couples-photography-afp-27.jpg">
+                    <img src="https://images.unsplash.com/photo-1615860783459-b90de23b4b96?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y3V0ZSUyMGNvdXBsZXxlbnwwfHwwfHx8MA%3D%3D">
                 </div>
                 <img src="assets/images/blindfold-512.png" class="center-image" alt="Center Image"> 
 
