--- a/src/app/dealer/dealer.component.html
+++ b/src/app/dealer/dealer.component.html
@@ -11,7 +11,7 @@
         <h1 class="heading">The Dealer</h1>
 
         <div class="centered-container">
-            <a routerLink="/home"> <button class="centered-button">Search Match</button> </a>
+            <a routerLink="/home"> <button class="centered-button">Find Match</button> </a>
         </div>
 
         <div class ="con1">
