--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -55,7 +55,7 @@
         <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
         <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
         <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
-        <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+        <a routerLink="/profile"><img src="assets/images/gear.png" class="rounded_img"></a>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEH3j5o4wX0l2n5l5rZ5JwFgjV8z4n4y1p5CUZZBpZbP" crossorigin="anonymous"></script>
