--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -47,11 +47,11 @@
             <div><h2>Dating in disguise</h2></div>
             <div class="rightcentral">
                 <div class="leftblack">
-                    <img src="https://images.unsplash.com/photo-1615860783459-b90de23b4b96?q=80&w=1000&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8Y3V0ZSUyMGNvdXBsZXxlbnwwfHwwfHx8MA%3D%3D">
+                    <img src="assets/images/loginPic">
                 </div>
                 <img src="assets/images/blindfold-512.png" class="center-image" alt="Center Image"> 
                 <div class="rightblack">
-                    <img src="https://images.pexels.com/photos/1024984/pexels-photo-1024984.jpeg?cs=srgb&dl=pexels-asadphoto-1024984.jpg&fm=jpg">
+                    <img src="assets/images/loginPic2">
                 </div>
             </div>
             <!-- Additional content can be added here -->
