gear.png UGGHHHHHHHHHHHHHHHHH

--- a/src/app/view-other-profile/view-other-profile.component.html
+++ b/src/app/view-other-profile/view-other-profile.component.html
@@ -63,7 +63,7 @@
         <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
         <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
         <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
-        <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+        <a routerLink="/profile"><img src="assets/images/gear.png" class="rounded_img"></a>
     </div>
 </body>
 </html>
