--- a/src/app/messages/messages.component.html
+++ b/src/app/messages/messages.component.html
@@ -7,7 +7,7 @@
     <div class="container">
         <div class="row no-gutters">
             <div class="chat">
-                <input type="text" placeholder="Search">
+                 <h3>Messages</h3>
             </div>
             <div class="chatlist">
               <div class="block" *ngFor="let chat of userChats" (click)="loadMessages(chat.id)">
