--- a/src/app/admin/admin.component.html
+++ b/src/app/admin/admin.component.html
@@ -1,1 +1,65 @@
-<p>admin works!</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <link href='https://fonts.googleapis.com/css?family=Irish Grover' rel='stylesheet'>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        /* Additional styles */
+        .user-info {
+            padding: 10px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+<body>
+    <div class="sidenav">
+        <a routerLink="/home"><img src="assets/images/search_icon.jpg" class="rounded_img"></a>
+        <a routerLink="/messages"><img src="assets/images/message_icon.jpg" class="img-fluid"></a>
+        <a routerLink="/dealer"><img src="assets/images/cards.jpg" class="img-fluid"></a>
+        <a routerLink="/profile"><img src="assets/images/profile_icon.jpg" class="rounded_img"></a>
+    </div>
+    <div>
+        <h1>All Users</h1>
+        <div class="results">
+            <ng-container *ngIf="searchResults.length > 0; else noResults">
+                <div class="row">
+                    <div class="col-md-4" *ngFor="let result of searchResults">
+                        <div class="user-info">
+                            <h3>User Information:</h3>
+                            <div class="profile-info">
+                                <p><strong>User Banned:</strong>{{result.profile.userBanned}}</p>
+                                <p><strong>Username:</strong> {{ result.user.userName }}</p>
+                                <p><strong>Age:</strong> {{ result.profile.userAge }}</p>
+                                <p><strong>Name:</strong> {{ result.profile.userRealName }}</p>
+                                <p><strong>Interests:</strong>
+                                    {{ result.profile.userDrinker ? 'Drinker' : '' }}
+                                    {{ result.profile.userSmoker ? 'Smoker' : '' }}
+                                    {{ result.profile.userSport ? 'Sport' : '' }}
+                                    {{ result.profile.userCooking ? 'Cooking' : '' }}
+                                    {{ result.profile.userReading ? 'Reading' : '' }}
+                                    {{ result.profile.userFilm ? 'Film' : '' }}
+                                    {{ result.profile.userGaming ? 'Gaming' : '' }}
+                                    {{ result.profile.userMusic ? 'Music' : '' }}
+                                    {{ result.profile.userTravel ? 'Travel' : '' }}
+                                </p>
+                            </div>
+                            <div style="display: block;">
+                                <button class="button" (click)="banUser(result.userID)">Ban</button>
+                                <button class="button" (click)="unbanUser(result.userID)">Unban</button>
+                                <button class="button" (click)="deleteUser(result.userID)">Delete</button>
+                            </div>
+                            <a [routerLink]="['/view-other-profile', result.userID]"> <!-- Adding anchor tag here -->
+                                <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'" class="circular-image">
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </ng-container>
+            <ng-template #noResults>
+                <p>No results found.</p>
+            </ng-template>
+        </div>
+    </div>
+</body>
+</html>
