move position of start chatting

--- a/src/app/view-other-profile/view-other-profile.component.html
+++ b/src/app/view-other-profile/view-other-profile.component.html
@@ -52,10 +52,10 @@
                     </div>
                 </div>
                 <div class="profile_description">
-                    <label class="label">Description:</label><br>
+                    <label class="label" for="description">Bio:</label><br>
                     <div>{{ userProfile.userBio }}</div>
                 </div>
-                <button (click)="startChatting()">Start Chatting</button>
+                <button class="start-chatting-button" (click)="startChatting()">Start Chatting</button>
             </div>
         </div>
     </div>
