--- a/src/app/profile/profile.component.html
+++ b/src/app/profile/profile.component.html
@@ -35,8 +35,7 @@
                             <select id="Seeking" name="Seeking" [(ngModel)]="userProfile.userSeeking" required>
                                 <option value="male">Male</option>
                                 <option value="female">Female</option>
-                                <option value = "both">Both</option>
-                                <option value="other">Other</option>
+                                <option value = "both">All</option>
                             </select>
                         </div>
                     </form>
