--- a/src/app/view-other-profile/view-other-profile.component.css
+++ b/src/app/view-other-profile/view-other-profile.component.css
@@ -57,7 +57,6 @@ body{
 .container .left{
     position: relative;
     flex: 30%;
-    display: flex;
     font-family: Georgia, 'Times New Roman', Times, serif;
     text-decoration: underline white;  
     text-align: center;
@@ -232,8 +231,8 @@ select {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: larger;
     margin-left: 10%;
-    float: left;
     padding-top: 5%;
+    display: inline-block;
 
 }
 
@@ -244,7 +243,7 @@ select {
 .profile_description {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: larger;
-    margin-top: 5%;
+    margin-top: 1%;
     padding-left: 10%;
     width: 60%; /* Set a fixed width for the description */
     overflow-wrap: break-word; /* Allow long words to break and wrap */
