--- a/src/app/view-other-profile/view-other-profile.component.html
+++ b/src/app/view-other-profile/view-other-profile.component.html
@@ -49,7 +49,7 @@
                     </div>
                 </div>
                 <div class="profile_description">
-                    <label class="label" for="description">Bio:</label><br>
+                    <label class="label" for="Bio">Bio:</label><br>
                     <div>{{ userProfile.userBio }}</div>
                 </div>
                 <div class="startChatting">
