--- a/src/app/view-other-profile/view-other-profile.component.css
+++ b/src/app/view-other-profile/view-other-profile.component.css
@@ -226,6 +226,10 @@ select {
     height: 50%;
     background-color: rgb(214, 210, 210);
     margin: 0; 
+    display: flex;
+    flex-direction: column;
+    
+    
 }
 
 .start-chatting-button {
@@ -293,12 +297,15 @@ input[type="file"] {
 }
 
 .startChatting{
-    display: flex; 
-    justify-content: center; 
-    align-items: flex-end; 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end; 
+    align-items: center; 
+    margin-top: auto;
 }
 
 .startChatting:hover button{
+     align-self: flex-end;
     background-color: #636160; 
 }
 
