--- a/src/app/view-other-profile/view-other-profile.component.css
+++ b/src/app/view-other-profile/view-other-profile.component.css
@@ -297,8 +297,7 @@ input[type="file"] {
 }
 
 .startChatting{
-    display: flex;
-    flex-direction: column;
+    text-align: center;
     justify-content: flex-end; 
     align-items: center; 
     margin-top: auto;
