--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -212,7 +212,7 @@ select {
     text-align: center;
     font-size: 130%;
     cursor: pointer;
-    height: auto;
+    height: 70vh;
     width: 100%;
 }
 
@@ -252,7 +252,9 @@ select {
 
     margin-top: 1%;
     width: 40%;
-    height: 42vh;
+    max-height: 42vh;
+    height: 41vh;
+
     border-bottom: 1.5px solid #F7270B;    
 
 }
@@ -266,7 +268,7 @@ select {
     font-size: larger;
     text-align: center;
     cursor: pointer;
-    margin-right: 8%;
+    margin-right: 33%;
 }
 
 input[type="submit"] button{
