--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -190,7 +190,8 @@ select {
 .Profile_button {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: larger;
-    text-align: end;}
+    text-align: end;
+    }
 
 .Profile_button:hover button{
     background-color:grey;
@@ -244,19 +245,20 @@ select {
     font-family: Georgia, 'Times New Roman', Times, serif;
     font-size: larger;
     margin-top: 5%;
-    ;
+    left: 5%;
+    position: relative;
     
 }
 
 .profile_description textarea{
-
+    position: relative;
     margin-top: 1%;
-    width: 40%;
-    max-height: 42vh;
+    width: 60%;
+    max-height: 30vh;
     height: 41vh;
-
-    border-bottom: 1.5px solid #F7270B;    
-
+    border-bottom: 1.5px solid #F7270B;   
+    top: 50%;
+    
 }
 
 .profile_submit:hover button{
@@ -269,6 +271,15 @@ select {
     text-align: center;
     cursor: pointer;
     margin-right: 33%;
+    float: right;
+}
+
+.label{
+    left: 5%;
+}
+.character-count {
+    left: 5%;
+    position: relative;
 }
 
 input[type="submit"] button{
@@ -297,6 +308,8 @@ input[type="file"]::-webkit-file-upload-button {
   display: block;
 }
 
+
+
 @media (max-width:60em) {
     .sidenav {
       display: none;
@@ -320,7 +333,7 @@ input[type="file"]::-webkit-file-upload-button {
     }
 }
 
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 950px) {
     
     .container {
         flex-direction: column; 
