--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -26,6 +26,7 @@
     overflow: hidden; 
     width: 100%;
     height: 100%;
+    background-color: #000;
 }
 .centre {
     display: flex;
@@ -35,6 +36,7 @@
     position: relative;
     margin-left: 10%;
     transition: left 0.3s;
+    background-color: #000;
 }
 
 .container {
@@ -61,6 +63,7 @@ button {
     color: #000000;
     border-radius: 5%;
     cursor: pointer;
+    
 }
 
 button:hover {
@@ -91,6 +94,7 @@ body {
     cursor: pointer;
     border-radius: 8px;
     z-index: 10;
+    background-color: #000;
   }
 
    .checkbox-group {
@@ -98,9 +102,11 @@ body {
             justify-content: center;
             flex-wrap: wrap;
             color: white;
+            background-color: #000;
         }
         .checkbox-item {
             margin-right: 20px;
+            background-color: #000;
         }
 
 @media (max-width:60em) {
