--- a/src/app/search-list/search-list.component.css
+++ b/src/app/search-list/search-list.component.css
@@ -4,6 +4,7 @@
             padding: 0;
             background-color: white;
             font-size: 1em;
+            max-width: 100%;
         }
 
         .sidenav {
@@ -39,7 +40,7 @@
         h1 {
             font-family: 'Irish Grover', sans-serif;
             font-size: 36px;
-            color: #333; /* Dark gray text */
+            color: #333; 
             text-align: center;
         }
 
@@ -48,11 +49,11 @@
         }
 
         .user-info {
-          width: 95%;
+          width: 97%;
             padding: 3px;
             border: 1px solid #ccc;
             margin-bottom: 20px;
-            overflow: hidden; /* Clear the floats */
+            overflow: hidden; 
             min-height: 96%;
         }
 
@@ -70,13 +71,19 @@
 
        .circular-image {
     display: block;
-    margin: 0 auto; /* Center the image horizontally */
-    width: 49%; /* Adjust the width as needed */
+    margin: 0 auto;
+    width: 49%; 
     height: auto;
     border-radius: 50%;
     object-fit: cover;
     
 }
+
+   .user-info {
+            padding: 10px;
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+        }
 
         @media (max-width:60em) {
             .sidenav {
