--- a/src/app/search-list/search-list.component.html
+++ b/src/app/search-list/search-list.component.html
@@ -3,14 +3,7 @@
 <head>
     <link href='https://fonts.googleapis.com/css?family=Irish Grover' rel='stylesheet'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <style>
-        /* Additional styles */
-        .user-info {
-            padding: 10px;
-            border: 1px solid #ccc;
-            margin-bottom: 20px;
-        }
-    </style>
+    
 </head>
 <body>
     <div class="sidenav">
@@ -43,7 +36,7 @@
                                     {{ result.profile.userTravel ? 'Travel' : '' }}
                                 </p>
                             </div>
-                            <a [routerLink]="['/view-other-profile', result.userID]"> <!-- Adding anchor tag here -->
+                            <a [routerLink]="['/view-other-profile', result.userID]"> 
                                 <img [src]="result.profile.profileImageURL || 'assets/images/greyIcon.png'" class="circular-image">
                             </a>
                         </div>
