Profile can only submit if they are 18 or over

--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -358,4 +358,12 @@ input[type="file"]::-webkit-file-upload-button {
     }
 }
 
+.error-message {
+    color: red;
+    font-size: 0.8em;
+    margin-top: 5px;
+}
+
+
+
 
