--- a/src/app/banned/banned.component.css
+++ b/src/app/banned/banned.component.css
@@ -9,7 +9,7 @@
   
   .banned-image {
     margin-top: -100px; /* Adjust the value to position the image */
-    width: 150px; /* Adjust size as needed */
+    width: 150px; 
   }
   
   .banned-content {
