--- a/src/app/profile/profile.component.css
+++ b/src/app/profile/profile.component.css
@@ -307,7 +307,7 @@ input[type="file"] {
 }
 
 .profile-image img {
-  padding-bottom: 10px; /* Adjust the value as needed */
+  padding-bottom: 10px;
   border-radius: 50%;
 }
 
