--- a/src/app/messages/messages.component.css
+++ b/src/app/messages/messages.component.css
@@ -204,28 +204,28 @@ form button:hover {
 }
 
 .sent-message {
-    text-align: right; /* Align text to the right */
+    text-align: right; 
     background-color: white;
     color: black;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
-    float: right; /* Float messages to the right */
-    clear: both; /* Ensure each message starts on a new line */
-    max-width: 50%; /* Limit the maximum width to 50% */
+    float: right; 
+    clear: both; 
+    max-width: 50%; 
     word-wrap: break-word;
   }
   
   .received-message {
-   text-align: left; /* Align text to the left */
+   text-align: left; 
     background-color: dodgerblue;
     color: white;
     padding: 10px;
     border-radius: 10px;
     margin-bottom: 10px;
-    float: left; /* Float messages to the left */
-    clear: both; /* Ensure each message starts on a new line */
-    max-width: 50%; /* Limit the maximum width to 50% */
+    float: left; 
+    clear: both; 
+    max-width: 50%; 
     word-wrap: break-word;
   }  
 
